<resources>
    <string name="app_name">Quality Reads</string>
    <string name="signInTitle">Sign In</string>
    <string name="hiLbl">Hi there! Nice to see you again</string>
    <string name="emailLbl">E-mail</string>
    <string name="emailEdt" />
    <string name="passwordLbl">Password</string>
    <string name="passwordEdt" />
    <string name="signInBtn">SIGN IN</string>
    <string name="forgotPasswordBtn">Forgot Password ?</string>
    <string name="dontHaveAcctLbl">Do not have an Account?</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="signUpTitle">Sign Up</string>
    <string name="firstNameLbl">First name</string>
    <string name="lastNameLbl">Last name</string>
    <string name="firstNameEdt" />
    <string name="lastNameEdt" />
    <string name="addressLbl">Address</string>
    <string name="addressEdt" />
    <string name="phoneNumberLbl">Phone Number</string>
    <string name="phoneNumberEdt" />
    <string name="continueBtn">Continue</string>
    <string name="haveAnAcctLbl">Have an account ?</string>
    <string name="forgotPasswordLbl">Forgot Password</string>
    <string name="newPasswordLbl">New Password</string>
    <string name="emailForgotPasswordEdt" />
    <string name="confirmPasswordLbl">Confirm Password</string>
    <string name="confirmPasswordEdt" />
    <string name="SplashQuality">Quality</string>
    <string name="SplashReads">Reads</string>
    <string name="stockLbl">Stock</string>
    <string name="acctTitle">Account</string>
    <string name="userAcctBtn">USER ACCOUNT</string>
    <string name="addCardBtn">ADD CARD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="updateProfileBtn">UPDATE PROFILE</string>
    <string name="cardHolderNameLbl">Cardholder name</string>
    <string name="cardHolderNameEdt" />
    <string name="cardNumberLbl">Card number</string>
    <string name="cardNumberEdt" />
    <string name="expiryDateLbl">Expiry date</string>
    <string name="expiriDateEdt" />
    <string name="updateCardBtn">Update</string>
    <string name="deleteCardBtn">Delete</string>
    <string name="note">Note : After pressing the continue button, we will send an email to your email account.</string>
    <string name="addBtn">ADD</string>
    <string name="paymentTitle">Payment Confirmation</string>
    <string name="totalVal">Total :</string>
    <string name="cvv">CVV</string>
    <string name="payBtn">PAY NOW</string>
    <string name="logOut">LOGOUT</string>
    <string name="title_activity_admin_sessions">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="validPayTitle">Payment is Successful!</string>
    <string name="LKR">Rs.</string>

    <!--    Inventory     -->
    <string name="homeTitle">Home</string>
    <string name="inventoryTitle">Inventory</string>
    <string name="addNewBookTitle">Add a new book</string>
    <string name="update_deleteBookTitle">Update or Delete</string>
    <string name="quantity">Qty:</string>
    <string name="textViewName">Name:</string>
    <string name="textViewIsbn">ISBN:</string>
    <string name="textViewCategory">Category:</string>
    <string name="textViewPagination">Pagination:</string>
    <string name="textViewPublisher">Publisher:</string>
    <string name="textViewPublished_date">Published date:</string>
    <string name="textViewPrice">Price:</string>
    <string name="textViewDescription">Description:</string>
    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="add_to_cart_button">Add to cart</string>
    <string name="select_image">Select image</string>
    <string name="sample_book_title">Sample book title</string>
    <string name="isbn">ISBN</string>
    <string name="choose_image">Choose image</string>

    <!--Delivery-->
    <string name="admin">Admin</string>
    <string name="inventory">Inventory</string>
    <string name="delivery">Delivery</string>
    <string name="order">Order</string>
    <string name="driver_list">Driver List</string>
    <string name="order_id">Order ID</string>
    <string name="action">Action</string>
    <string name="view_driver">View Driver Details</string>
    <string name="edit">Edit</string>
    <string name="new_driver">+Add New Driver</string>
    <string name="capture">capture</string>
    <string name="assign">assign</string>
    <string name="title_activity_driver_list">DriverList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="add_new_driver">Add New Driver</string>
    <string name="driver_id">Driver ID</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_email">Driver Email</string>
    <string name="vehicle_no">Vehicle No</string>
    <string name="contact_no">Contact No</string>
    <string name="address">Address</string>
    <string name="add">Add</string>
    <string name="view">view</string>
    <string name="save">save changes</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
</resources>